--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -a 0.0.0.0 -p 8000"
+    "start": "http-server -a localhost -p 8000 -o"
   },
   "repository": {
     "type": "git",
